[tool.poetry]
authors = ["Gergő Jedlicska <gergo@jedlicska.com>"]
description = "Example function for Speckle Automate using specklepy"
name = "speckle-automate-py"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
specklepy = "^2.19.5"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
pydantic-settings = "^2.3.0"
pytest = "^7.4.2"
ruff = "^0.0.271"
# specklepy = { path = "../specklepy", develop = true }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "UP", # pyupgrade
  "D", # pydocstyle
  "I", # isort
]

[tool.pytest.ini_options]
log_cli = true

[tool.ruff.pydocstyle]
convention = "google"
